<resources>
    <string name="app_name">Dado o muerte</string>
    <string name="manual_de_juego">Manual de juego</string>
    <string name="vida">Vidas: </string>
    <string name="Nombre">Nombre: </string>
    <string name="vida1">3</string>
    <string name="tirada">Tirar los dados</string>
    <string name="NombreJugador">Nombre del jugador</string>
    <string name="AñadirJugador">Añadir jugador</string>
    <string name="Jugadores">Jugadores: </string>
    <string name="eliminar">Eliminar</string>
    <string name="dad">Pasar turno</string>
    <string name="empezar">Empezar partida</string>
    <string name="tiradaA">tirada:</string>
    <string name="perdedor">El perdedor es: nombre</string>
    <string name="jugar_de_nuevo">Jugar de nuevo</string>
    <string name="volverAlMenu">Volver al menú principal</string>
    <string name="mensaje_bienvenida">Bienvenido a Dado o Muerte</string>
    <string name="nueva_partida">Nueva partida</string>
    <string name="twitter_consumer_key">LrWiidpLuWKVbfjInDzuNjL2r</string>
    <string name="twitter_consumer_secret">hJGy4nO2n6kWQIu7qrj28Qa3MrIgN4EtLicUI1iMdO72apjsYz</string>

</resources>
